--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "HepMC"
 uuid = "8c5db9d4-012b-4375-9c84-9f6ebef35d36"
 authors = ["Quan-feng WU <wuquanfeng@ihep.ac.cn>"]
 version = "0.1.0"
+
+[deps]
+StructParticle = "ba31282d-ba71-4615-a5c1-2453621d5387"
