--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Quan-feng WU <wuquanfeng@ihep.ac.cn>"]
 version = "0.1.0"
 
 [deps]
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 StructParticle = "ba31282d-ba71-4615-a5c1-2453621d5387"
